--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 JWTPRIVATEKEY = "secretkey"
 SALT = 10
 LOCAL_DATABASE_URL="mongodb://127.0.0.1:27017/vaccines"
-DATABASE_URL="mongodb+srv://sushmit:d0Kursd8XPXaSlR2@cluster0.k446z.mongodb.net/?retryWrites=true&w=majority'"
+DATABASE_URL="mongodb+srv://sushmit:d0Kursd8XPXaSlR2@cluster0.k446z.mongodb.net/?retryWrites=true&w=majority"
