FE origins added in env

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ JWTPRIVATEKEY = "secretkey"
 SALT = 10
 LOCAL_DATABASE_URL="mongodb://127.0.0.1:27017/vaccines"
 DATABASE_URL="mongodb+srv://sushmit:d0Kursd8XPXaSlR2@cluster0.k446z.mongodb.net/?retryWrites=true&w=majority"
+DEV_ORIGIN="http://localhost:3000"
+ORIGIN="https://main--peppy-pony-00d3ac.netlify.app"
